--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     
     <script src="https://editor.printess.com/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <script type="module">
+    <script>
       window.WebComponents = window.WebComponents || {
         waitFor(cb) {
           addEventListener('WebComponentsReady', cb);
