--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>Printess Getting Started</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    
-    <script src="https://editor.printess.com/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <script>
-      window.WebComponents = window.WebComponents || {
-        waitFor(cb) {
-          addEventListener('WebComponentsReady', cb);
-        }
-      };
-      function loadPrintessEditor() {
-        return new Promise(async resolve => {
-          WebComponents.waitFor(async () => {
-            let printessLoader = await import('https://editor.printess.com/printess-editor/printess-editor.js');
-            resolve(printessLoader);
-          });
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <title>Printess Getting Started React</title>
+  <style>
+    body {
+      overflow: hidden;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+  <script src="https://editor.printess.com/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js">
+  </script>
+
+  <script>
+    window.WebComponents = window.WebComponents || {
+      waitFor(cb) {
+        addEventListener('WebComponentsReady', cb);
+      }
+    };
+    function loadPrintessEditor() {
+      return new Promise(async resolve => {
+        WebComponents.waitFor(async () => {
+          let printessLoader = await import('https://editor.printess.com/printess-editor/printess-editor.js');
+          resolve(printessLoader);
         });
-      };
-      window.loadPrintessEditor = loadPrintessEditor;
-    </script>
-  </body>
+      });
+    };
+    window.loadPrintessEditor = loadPrintessEditor;
+  </script>
+</body>
+
 </html>
